--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["tcp", "network"]
 log = "~0.4"
 anyhow = "^1.0"
 async-trait = "~0.1"
-tokio = { version = "^1.35", features = ["net", "signal", "time"] }
+tokio = { version = "^1.35", features = ["macros", "net", "signal", "time"] }
 tokio-util = { version = "~0.7", features = ["rt"] }
 tcp-handler = "~0.4"
 serde = { version = "^1.0", features = ["derive"], optional = true }
@@ -25,4 +25,4 @@ default = ["serde"]
 
 [dev-dependencies]
 env_logger = "~0.10"
-tokio = { version = "^1.35", features = ["rt-multi-thread", "macros"]}
+tokio = { version = "^1.35", features = ["rt-multi-thread"]}
