--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "^1.0", features = ["derive"], optional = true }
 #tracing = { version = "~0.1", optional = true }
 
 [features]
-default = ["serde"]
+default = []
 
 [build-dependencies]
 reportme = "~0.2"
