--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["xuxiaocheng <2762267080@qq.com>"]
 edition = "2021"
 description = "Convenient server-side TCP service. Based on tcp-handler."
 readme = "README.md"
-license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/xuxiaocheng0201/tcp-handler/tree/server"
 documentation = "https://docs.rs/tcp-server/"
 categories = ["network-programming"]
@@ -40,6 +40,3 @@ opt-level = 3
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
-
-[package.metadata.playground]
-features = ["default", "serde"]
